--- a/spring-start-here/pom.xml
+++ b/spring-start-here/pom.xml
@@ -18,6 +18,7 @@
   <properties>
     <spring.version>5.3.22</spring.version>
     <lombok.version>1.18.24</lombok.version>
+    <javax.annotation.version>1.3.2</javax.annotation.version>
   </properties>
   
 
@@ -41,6 +42,11 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>${lombok.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>${javax.annotation.version}</version>
     </dependency>
   </dependencies>
 
